--- a/vercel.json
+++ b/vercel.json
@@ -8,27 +8,7 @@
   ],
   "rewrites": [
     {
-      "source": "/api/:postId.webm",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.mp4",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.png",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.jpeg",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.jpg",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.gif",
+      "source": "/api/:postId.*",
       "destination": "/api?postId=:postId"
     }
   ]
