--- a/vercel.json
+++ b/vercel.json
@@ -8,15 +8,7 @@
   ],
   "rewrites": [
     {
-      "source": "/api/:postId.gif",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.jpg",
-      "destination": "/api?postId=:postId"
-    },
-    {
-      "source": "/api/:postId.png",
+      "source": "/api/:postId",
       "destination": "/api?postId=:postId"
     }
   ]
