--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/api/:slug",
+      "source": "/:slug",
       "destination": "/api/yiff.js?slug=:slug"
     },
     {
-      "source": "/api/embed/:postId",
+      "source": "/posts/:postId",
       "destination": "/api/yiff.js?slug=:postId&embed=true"
     }
   ]
