--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,8 @@
       "destination": "/api/yiff.min.js?slug=:postId&embed=true"
     },
     {
-      "source": "/posts/:postId/file",
-      "destination": "/api/yiff.min.js?slug=:postId"
+      "source": "/posts/:postId/file:ext",
+      "destination": "/api/yiff.min.js?slug=:postId:ext"
     }
   ]
 }
